@@ -1,3 +1,12 @@
+Thu Jan 18 21:46:17 UTC 2007  Ciju John  <johnc@ociweb.com>
+
+        * dds/DCPS/transport/simpleTCP/SimpleTcpTransport.cpp:
+	  Cosmetic changes.
+
+        * dds/DCPS/transport/framework/EntryExit.h:
+	  Some private members were logically constants. Made them
+          explicit.
+
 Wed Jan 17 23:31:44 UTC 2007  Adam Mitz  <mitza@ociweb.com>
 
         * dds/DCPS/transport/framework/EntryExit.h:
